// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closing-php-tag.php - php-verify: closing-php-tag.php 1`] = `
#!/usr/bin/php
<?php
var_dump($argv);
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#!/usr/bin/php
<?php var_dump($argv);
?>

`;

exports[`inline.php - php-verify: inline.php 1`] = `
#!/usr/bin/php
<?php var_dump($argv);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#!/usr/bin/php
<?php var_dump($argv);

`;

exports[`shebang.php - php-verify: shebang.php 1`] = `
#!/usr/bin/php
<?php
var_dump($argv);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#!/usr/bin/php
<?php var_dump($argv);

`;
